# advanced_arithmetic_algorithms

./: .gitignore  README.md
GF2n/: gf2n.hpp  main.cpp  task1_1
Homework_from_1_03_26/: 1_3task  1_4task  2_10task  2_13task  2_6task  2_7task  2_8task  2_9task  main1_3.cpp  main1_4.cpp  main2_10.cpp  main2_13.cpp  main2_6.cpp  main2_7.cpp  main2_8.cpp  main2_9.cpp
Homewrok_27_04_2026/: main8.cpp  task8
Numerical_solvers/: Newton_system.hpp  Newtons_method.hpp  SImple_iteration.hpp  Series_inverse.hpp  TheDichotomy_method.hpp  helpers.hpp
Poly_solver/: CMakeLists.txt  main.cpp
Poly_solver/core/: polynoms.cpp  polynoms.h
Poly_solver/include/: BelongingToLinearShell.h
Poly_solver/src/: BelongingToLinearShell.cpp
Problems_from_Knut_book/: 4_6_4_41.cpp
Problems_from_Knut_book/short_division/: division  main.cpp
Problems_from_introduction_to_Algorithms_book/: 30_1_7.cpp  30_3.cpp  cartesian_sum.hpp  fft.hpp  task30_1_7  task30_3
Problems_from_modern_computer_algebra_book/src/: devide_compex_numbers_in_7_multipls.cpp  fast_convolution.cpp  task8_1  task8_24
Trie_poly/: 4_3task  main.cpp  main5_3_1.cpp  main5_3_2.cpp  main7_3_1.cpp  main7_3_3.cpp  main8_3_1.cpp  rational.hpp  task5_3_1  task5_3_2  task7_3_1  task7_3_3  task8_3_1  trie_poly.hpp
monimial_ideal_task_visualization/: CMakeLists.txt  mainwindow.cpp  mainwindow.hpp  mainwindow.ui
